--- a/css/style.css
+++ b/css/style.css
@@ -13,10 +13,15 @@ body {
      margin: auto;
 }
 
+
+/* todo — header */
+
+
 .header {
      display: flex;
      align-items: center;
      padding: 10px 0;
+     margin-bottom: 30px;
 }
 
 .search-form {
@@ -85,4 +90,421 @@ body {
      position: absolute;
      right: 0;
      bottom: 0;
+}
+
+
+/* todo — slider */
+
+
+.slide {
+     border-radius: 20px;
+     min-height: 400px;
+     display: flex;
+     align-items: center;
+     padding: 100px;
+     position: relative;
+     overflow: hidden;
+     /* ! прячем всё что вываливается ЗА */
+}
+
+.slide-summer {
+     background-image: url(../img/summer.png);
+     background-color: no-repeat;
+     background-size: cover;
+}
+
+.slide:before {
+     content: '';
+     position: absolute;
+     left: 0;
+     right: 0;
+     top: 0;
+     bottom: 0;
+     width: 100%;
+     height: 100%;
+     background: linear-gradient(90deg, rgba(0, 0, 0, 0.43) 40.45%, rgba(0, 0, 0, 0.568) 100%);
+}
+
+.slide-content {
+     max-width: 400px;
+     position: relative;
+}
+
+.slide-text-light {
+     background-color: grey;
+     color: #fff;
+}
+
+.slide-h2 {
+     margin-top: 0;
+     margin-bottom: 15px;
+     font-weight: bold;
+     font-size: 50px;
+     line-height: 51px;
+}
+
+.slide-p {
+     font-weight: bold;
+     font-size: 16px;
+     line-height: 23px;
+     margin-bottom: 30px;
+}
+
+.button {
+     border-radius: 25px;
+     padding: 12px 50px;
+     display: inline-block;
+     text-decoration: none;
+}
+
+.button-default {
+     background-color: #fff;
+     color: #5F5F61
+}
+
+.button-primary {
+     background-color: #F47322;
+     color: #fff;
+     font-style: normal;
+     font-weight: 500;
+     font-size: 14px;
+     line-height: 23px;
+}
+
+
+/* todo — promo */
+
+
+.promo {
+     padding: 50px 0;
+     display: flex;
+     justify-content: space-between;
+     margin: -20px;
+}
+
+.card {
+     flex: 50%;
+     /* ! задать двум карточкам - одинаковый размер */
+     max-width: 570px;
+     min-height: 380px;
+     border-radius: 20px;
+     overflow: hidden;
+     padding: 32px;
+     color: #fff;
+     display: flex;
+     flex-direction: column;
+     justify-content: space-between;
+     position: relative;
+     margin: 20px;
+}
+
+.card:before {
+     z-index: -1;
+     content: '';
+     position: absolute;
+     left: 0;
+     top: 0;
+     width: 100%;
+     height: 100%;
+     background: linear-gradient(0deg, rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3));
+}
+
+.card-title {
+     font-weight: 500;
+     font-size: 24px;
+     line-height: 23px;
+     margin-top: 4px;
+     margin-bottom: 21px;
+}
+
+.card-p {
+     font-weight: 500;
+     font-size: 16px;
+     line-height: 23px;
+     max-width: 200px;
+}
+
+.card-price {
+     display: block;
+     font-weight: 500;
+     font-size: 24px;
+     line-height: 23px;
+     margin-bottom: 8px;
+}
+
+.card-delivery {
+     font-weight: 500;
+     font-size: 16px;
+     line-height: 23px;
+     margin-bottom: 25px;
+     display: block;
+}
+
+.card-image {
+     position: absolute;
+     left: 0;
+     top: 0;
+     width: 100%;
+     height: 100%;
+     z-index: -2;
+}
+
+
+/* todo — delivery */
+
+
+.delivery-week {
+     padding: 40px 0;
+}
+
+.delivery-cards {
+     display: flex;
+     flex-wrap: wrap;
+     margin: -15px;
+     /* ! отрицательный для родительского */
+}
+
+.delivery-title {
+     text-align: center;
+     font-weight: 500;
+     font-size: 32px;
+     line-height: 23px;
+     margin-top: 0;
+     margin-bottom: 80px;
+}
+
+.delivery-card {
+     margin: 15px;
+     width: 275px;
+     height: 182px;
+     border-radius: 18px;
+     overflow: hidden;
+     position: relative;
+}
+
+.delivery-image {
+     width: 100%;
+     height: 100%;
+     object-fit: cover;
+}
+
+.delivery-tag {
+     position: absolute;
+     top: 16px;
+     left: 10px;
+     border-radius: 30px;
+     font-weight: 500;
+     font-size: 20px;
+     line-height: 23px;
+     color: #49494f;
+     padding: 5px 10px;
+}
+
+
+
+
+.tag-zozh {
+     background: #d0fd89;
+}
+
+.tag-ovosh {
+     color: #fff;
+     background: #AEBC41;
+}
+
+.tag-myaso {
+     color: #fff;
+     background: #B86B78;
+}
+
+.tag-ptica {
+     color: #fff;
+     background: #D68334;
+}
+
+.tag-rybnoe {
+     color: #fff;
+     background: #CD6255;
+}
+
+.tag-detskoe {
+     background: #FFFDBF;
+}
+
+.tag-roditeli {
+     background: #F6FDC8;
+}
+
+.tag-prazdnik {
+     background: #FEF7FE;
+}
+
+
+/* todo — category */
+
+
+.section-grey {
+     background-color: #F6F6F6;
+}
+
+.category {
+     padding-top: 40px;
+     padding-bottom: 60px;
+}
+
+.category-title {
+     text-align: center;
+     font-weight: 500;
+     font-size: 32px;
+     line-height: 23px;
+     color: #000000;
+}
+
+.tabs {
+     display: flex;
+     margin: 0;
+     padding: 0;
+     list-style-type: none;
+     margin: 62px 0;
+}
+
+.tabs-link {
+     font-size: 20px;
+     line-height: 23px;
+     text-decoration: none;
+     color: #49494f;
+     margin-right: 58px;
+}
+
+.tabs-link-active {
+     color: #F37321;
+}
+
+.tabs-content {
+     display: flex;
+     justify-content: space-between;
+}
+
+.tabs-card {
+     max-width: 270px;
+     border-radius: 20px;
+     overflow: hidden;
+     background-color: #fff;
+     box-shadow: 0px 0px 10px 5px rgb(0 0 0 / 9%);
+}
+
+.tabs-card-content {
+     padding: 23px;
+}
+
+.tabs-image {
+     max-width: 100%;
+}
+
+.tabs-title {
+     margin-top: 0;
+     margin-bottom: 13px;
+     font-weight: 500;
+     font-size: 20px;
+     line-height: 23px;
+}
+
+.tabs-description {
+     font-weight: 500;
+     font-size: 14px;
+     line-height: 23px;
+     color: #b9b9be;
+}
+
+.tabs-info {
+     margin-top: 37px;
+     display: flex;
+     align-items: center;
+     justify-content: space-between;
+}
+
+.tabs-price {
+     font-weight: 500;
+     font-size: 23px;
+     line-height: 23px;
+     color: #4b4b51;
+     display: block;
+     margin-bottom: 5px;
+}
+
+.tabs-weight {
+     font-weight: 500;
+     font-size: 17px;
+     line-height: 20px;
+     color: #aaaab1;
+}
+
+.button-outline {
+     padding: 15px 25px;
+     background-color: transparent;
+     border: 2px solid #f37321;
+     border-radius: 33px;
+     font-weight: 500;
+     font-size: 16px;
+     line-height: 19px;
+     color: #f37321;
+}
+
+.button-center {
+     display: block;
+     margin: auto;
+     margin-top: 60px;
+     width: 315px;
+     cursor: pointer;
+}
+
+
+/* todo — balls */
+
+.balls {
+     padding: 50px;
+}
+
+.balls-title {
+     margin-bottom: 50px;
+     text-align: center;
+}
+
+.balls-cards {
+     display: flex;
+     justify-content: space-between;
+}
+
+.balls-cards-item {
+     border: 1px solid black;
+     border-radius: 20px;
+}
+
+.balls-cards-image {
+     display: block;
+     margin: 20px auto;
+}
+
+.balls-cards-title {
+     text-align: center;
+     margin-bottom: 10px;
+}
+
+.balls-cards-description {
+     text-align: center;
+}
+
+
+
+
+
+
+
+
+
+
+/*                     ЗАГЛУШКА             */
+
+.lol {
+     margin-top: 100px;
 }
